Add anchor elements in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="recipes/curry.html">Japanese Curry</a>
+        <a href="recipes/onigiri.html">Onigiri</a>
+        <a href="recipes/ragu.html">Beef Ragu</a>
+        <a href="recipes/tiramisu.html">Tiramisu</a>
     </body>
 </html>
