Adding css style on recipes html
Linking css links to the remaining recipes html to style and improve the website

--- a/recipes/ragu.html
+++ b/recipes/ragu.html
@@ -5,20 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beef Ragu</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
-        <h1>Beef Ragu</h1>
+        <h1 class="title">Beef Ragu</h1>
 
-        <img src="https://hips.hearstapps.com/hmg-prod/images/delish-190829-beef-ragout-0044-landscape-pf-1568394550.jpg?crop=0.668xw:1.00xh;0.167xw,0&resize=1200:*" alt="Beef ragu with Parmesan cheese" width="300">
+        <img src="https://hips.hearstapps.com/hmg-prod/images/delish-190829-beef-ragout-0044-landscape-pf-1568394550.jpg?crop=0.668xw:1.00xh;0.167xw,0&resize=1200:*" alt="Beef ragu with Parmesan cheese">
 
-        <h3>Description:</h3>
+        <h3 class="subheading">Description:</h3>
         <p>Beef ragu—a traditional Italian dish—is a slow-simmered sauce made with beef, tomatoes, pasta, etc.</p> 
         <p>Many newer ragu recipes use sambal oelek or anchovy paste to help build flavor, so I've used harissa, 
             but feel free to replace with 1/2 teaspoon crushed red pepper or 1 teaspoon fennel seeds or omit.</p>
 
-        <h4>Ingredients:</h4>
-        <ul>
+        <h4 class="subheading small">Ingredients:</h4>
+        <ul class="ingredients">
             <li>2 tablespoons olive oil</li>
             <li>1 (2 pound) boneless beef chuck roast, cut into 2-inch cubes</li>
             <li>1 teaspoon ground black pepper</li>
@@ -34,7 +35,7 @@
             <li>grated Parmesan cheese, for serving</li>
         </ul>
 
-        <h4>Steps:</h4>
+        <h4 class="subheading small">Steps:</h4>
         <ol>
             <li>
                 Heat oil in a large Dutch oven over medium-high. Season chuck roast with pepper and 2 teaspoons salt. 
