--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -5,22 +5,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tiramisu</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
-        <h1>Tiramisu</h1>
+        <h1 class="title">Tiramisu</h1>
 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/58/Tiramisu_-_Raffaele_Diomede.jpg" alt="tiramisu" width="300">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/58/Tiramisu_-_Raffaele_Diomede.jpg" alt="tiramisu">
 
-        <h3>Description:</h3>
+        <h3 class="subheading">Description:</h3>
         <p>
             Tiramisu is a classic Italian layered dessert with rum-flavored, coffee-soaked ladyfingers, a creamy 
             mascarpone custard, and whipped cream. This tiramisu recipe is easy to make at home for an impressive 
             no-bake dessert.
         </p>
 
-        <h4>Ingredients:</h4>
-        <ul>
+        <h4 class="subheading small">Ingredients:</h4>
+        <ul class="ingredients">
             <li>6 large egg yolks</li>
             <li>3/4 cup white sugar</li>
             <li>2/3 cup milk</li>
@@ -33,7 +34,7 @@
             <li>1 tablespoon unsweetened cocoa powder</li>
         </ul>
 
-        <h4>Steps:</h4>
+        <h4 class="subheading small">Steps:</h4>
         <ol>
             <li>Whisk together egg yolks and sugar in a medium saucepan until well blended.</li>
             <li>Whisk in milk and cook over medium heat, stirring constantly, until mixture comes to a boil.</li>
